tests/ui/resolve/issue-3099-a.stderr
error[E0428]: the name `A` is defined multiple times
  --> $DIR/issue-3099-a.rs:3:1
   |
LL | enum A { B, C }
   | ------ previous definition of the type `A` here
LL |
LL | enum A { D, E }
   | ^^^^^^ `A` redefined here
   |
   = note: `A` must be defined only once in the type namespace of this module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0428`.
